--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.bitmechanic</groupId>
     <artifactId>barrister-maven-plugin</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.13</version>
     <packaging>maven-plugin</packaging>
 
     <name>Barrister RPC Maven Plugin</name>
