--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.bitmechanic</groupId>
     <artifactId>barrister-maven-plugin</artifactId>
-    <version>0.1.17</version>
+    <version>0.1.18</version>
     <packaging>maven-plugin</packaging>
 
     <name>Barrister RPC Maven Plugin</name>
@@ -44,25 +44,31 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
-            <version>2.2.1</version>
+            <version>3.6.3</version>
         </dependency>
+
         <dependency>
             <groupId>com.bitmechanic</groupId>
             <artifactId>barrister</artifactId>
-            <version>0.1.17</version>
+            <version>0.1.18</version>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-plugin-plugin</artifactId>
+                <version>3.6.0</version>
+            </plugin>
+            <plugin>
                 <inherited>true</inherited>
                 <groupId>org.apache.maven.plugins</groupId>
-                <version>2.3.2</version>
+                <version>3.8.1</version>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <optimize>true</optimize>
                     <debug>true</debug>
                 </configuration>
@@ -77,7 +83,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8</version>
+                <version>3.1.1</version>
                 <configuration>
                     <outputDirectory>${project.build.directory}/javadoc</outputDirectory>
                     <reportOutputDirectory>${project.reporting.outputDirectory}/javadoc</reportOutputDirectory>
@@ -90,7 +96,7 @@
                             <goal>aggregate</goal>
                         </goals>
                         <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
+                            <doclint>none</doclint>
                         </configuration>
                     </execution>
                 </executions>
